--- a/09-example/index.html
+++ b/09-example/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doguinho</title> <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<h1>Doguinho</h1>
-<a href="1ano.html">
-  <img src="images/natur02.jpg" alt="natureza">
-  <p>Natureza</p>
-</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Doguinho</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h1>Doguinho</h1>
+      <div>
+        <a href="1ano.html">
+          <img src="images/natur02.jpg" alt="natureza" />
+          <p>Natureza</p>
+        </a>
+         <a href="2ano.html">
+          <img src="images/natur01.jpg" alt="natureza" />
+          <p>Natur</p>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
