refactor: move images into container div

--- a/09-example/1ano.html
+++ b/09-example/1ano.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1 ano</title> <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <a href="index.html">Voltar</a>
-  <img src="images/capa02.jpg" alt="capa">
-  <img src="images/cp01.jpg" alt="capa">
-  <img src="images/capa05.jpg" alt="capa">
-  <img src="images/capa04.jpg" alt="cpaa">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1 ano</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <a href="index.html">Voltar</a>
+    <div id="container">
+      <img src="images/capa02.jpg" alt="capa" />
+      <img src="images/cp01.jpg" alt="capa" />
+      <img src="images/capa05.jpg" alt="capa" />
+      <img src="images/capa04.jpg" alt="cpaa" />
+    </div>
+  </body>
 </html>
