refactor: move heading outside container div

--- a/09-example/index.html
+++ b/09-example/index.html
@@ -7,16 +7,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Doguinho</h1>
+
     <div id="container">
-      <h1>Doguinho</h1>
       <div>
         <a href="1ano.html">
           <img src="images/natur02.jpg" alt="natureza" />
           <p>Natureza</p>
         </a>
-         <a href="2ano.html">
-          <img src="images/natur01.jpg" alt="natureza" />
-          <p>Natur</p>
+      </div>
+
+      <div>
+        <a href="1ano.html">
+          <img src="images/natur02.jpg" alt="natureza" />
+          <p>Natureza</p>
+        </a>
+      </div>
+      <div>
+        <a href="1ano.html">
+          <img src="images/natur02.jpg" alt="natureza" />
+          <p>Natureza</p>
+        </a>
+      </div>
+
+      <div>
+        <a href="1ano.html">
+          <img src="images/natur02.jpg" alt="natureza" />
+          <p>Natureza</p>
         </a>
       </div>
     </div>
