refactor: finalize HTML structure and content

--- a/09-example/index.html
+++ b/09-example/index.html
@@ -12,28 +12,28 @@
     <div id="container">
       <div>
         <a href="1ano.html">
-          <img src="images/natur02.jpg" alt="natureza" />
-          <p>Natureza</p>
+          <img src="images/capa04.jpg" alt="cachorro" />
+          <p>Golden</p>
         </a>
       </div>
 
       <div>
-        <a href="1ano.html">
-          <img src="images/natur02.jpg" alt="natureza" />
-          <p>Natureza</p>
+        <a href="2ano.html">
+          <img src="images/capa03.jpg" alt="cachorro" />
+          <p>Familia</p>
         </a>
       </div>
       <div>
-        <a href="1ano.html">
-          <img src="images/natur02.jpg" alt="natureza" />
-          <p>Natureza</p>
+        <a href="3anos.html">
+          <img src="images/dog01.jpg" alt="cachorro" />
+          <p>Bebes</p>
         </a>
       </div>
 
       <div>
-        <a href="1ano.html">
-          <img src="images/natur02.jpg" alt="natureza" />
-          <p>Natureza</p>
+        <a href="4anos.html">
+          <img src="images/dog02.jpg" alt="cachorro" />
+          <p>Dalmatas</p>
         </a>
       </div>
     </div>
