refactor: finalize HTML structure and content

--- a/09-example/1ano.html
+++ b/09-example/1ano.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="index.html">Voltar</a>
+    <a href="index.html" id="voltar">Voltar</a>
     <div id="container">
       <img src="images/capa02.jpg" alt="capa" />
       <img src="images/cp01.jpg" alt="capa" />
