--- a/11-example/1ano.html
+++ b/11-example/1ano.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1ano- dogue</title> <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1ano- dogue</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <a href="index.html">Voltar</a>
-    <img src="fogos02.jpg" alt="fogos">
-    <img src="natur02.jpg" alt="fogos">
-    <img src="fogos02.jpg" alt="fogos">
-    <img src="natur02.jpg" alt="fogos">
-  </div>
-</body>
+
+    <div id="container">
+      <img src="fogos02.jpg" alt="fogos" />
+      <img src="natur02.jpg" alt="fogos" />
+      <img src="fogos02.jpg" alt="fogos" />
+      <img src="natur02.jpg" alt="fogos" />
+    </div>
+  </body>
 </html>
