refactor: organize images and project structure

--- a/11-example/1ano.html
+++ b/11-example/1ano.html
@@ -10,10 +10,10 @@
     <a href="index.html">Voltar</a>
 
     <div id="container">
-      <img src="fogos02.jpg" alt="fogos" />
-      <img src="natur02.jpg" alt="fogos" />
-      <img src="fogos02.jpg" alt="fogos" />
-      <img src="natur02.jpg" alt="fogos" />
+      <img src="images/fogos02.jpg" alt="fogos" />
+      <img src="images/natur02.jpg" alt="fogos" />
+      <img src="images/natur02.jpg" alt="fogos" />
+      <img src="images/fogos02.jpg" alt="fogos" />
     </div>
   </body>
 </html>
