--- a/11-example/index.html
+++ b/11-example/index.html
@@ -9,22 +9,22 @@
   <h1>Doguinho</h1>
   <div id="container">
       <a href="1ano.html">
-        <img src="fogos02.jpg" alt="">
+        <img src="images/fogos02.jpg" alt="">
         <p>paraiso</p>
       </a>
 
       <a href="1ano.html">
-        <img src="fogos02.jpg" alt="">
+        <img src="images/natur02.jpg" alt="">
         <p>paraiso</p>
       </a>
 
       <a href="1ano.html">
-        <img src="fogos02.jpg" alt="">
+        <img src="images/fogos02.jpg" alt="">
         <p>paraiso</p>
       </a>
 
       <a href="1ano.html">
-        <img src="fogos02.jpg" alt="">
+        <img src="images/natur02.jpg" alt="">
         <p>paraiso</p>
       </a>
       
